scripts/update_defconfig: Include vendor/debugfs.config
This disables the following kernel configs:
* CONFIG_DEBUG_FS
* CONFIG_PAGE_OWNER

* from: https://github.com/LineageOS/android_device_xiaomi_sm8250-common/commit/72af2c0d634bae71d6d5dabfcc114e158ba0c91d

--- a/scripts/update_defconfig
+++ b/scripts/update_defconfig
@@ -93,6 +93,7 @@ if [ -n  "$*" ]; then
     -O "${OUT_DIR}" \
     ${KERNEL_CFG}/../${SOC}-perf_defconfig \
     ${KERNEL_CFG}/sm8250-common.config \
+    ${KERNEL_CFG}/../debugfs.config \
   ${KERNEL_CFG}/"${DEVICE}".config);
 
   case "$ret" in
@@ -186,6 +187,7 @@ EOM
         -O "${OUT_DIR}" \
         ${KERNEL_CFG}/../${SOC}-perf_defconfig \
         ${KERNEL_CFG}/sm8250-common.config \
+        ${KERNEL_CFG}/../debugfs.config \
       ${KERNEL_CFG}/"${DEVICE}".config);
 
       case "$ret" in
