ARM64: configs: xiaomi: update auto-generated defconfig for all devices
This update is generated automatically by using the update_defconfig script
HEAD of the project used to prepare this commit:
https://github.com/bxySo/android_kernel_xiaomi_sm8250/tree/206ae4e10581082c8556b5741e2cf54f82965641

--- a/arch/arm64/configs/cas_defconfig
+++ b/arch/arm64/configs/cas_defconfig
@@ -413,6 +413,7 @@ CONFIG_CP_MAX77932=y
 CONFIG_RX1619_CAS=y
 CONFIG_RX1619_TRIM_CAS=y
 CONFIG_IDT_P9415_CAS=y
+CONFIG_CHARGER_BQ25790=y
 CONFIG_THERMAL=y
 CONFIG_THERMAL_WRITABLE_TRIPS=y
 CONFIG_THERMAL_GOV_USER_SPACE=y
@@ -447,7 +448,7 @@ CONFIG_RC_CORE=y
 CONFIG_LIRC=y
 CONFIG_RC_DECODERS=y
 CONFIG_RC_DEVICES=y
-CONFIG_IR_SPI_MI=y
+CONFIG_IR_SPI=y
 CONFIG_MEDIA_SUPPORT=y
 CONFIG_MEDIA_CAMERA_SUPPORT=y
 CONFIG_MEDIA_DIGITAL_TV_SUPPORT=y
